# mmoinsweeper

./: Cargo.toml  README.md  prompt  run.sh  setup_hooks.sh
.github/scripts/: update_version.py
.github/workflows/: release.yml  rust-tests.yml
.gpteng/: file_selection.toml
.gpteng/memory/logs/: all_output.txt  debug_log_file.txt  diff_errors.txt  gen_entrypoint_chat.txt  improve.txt
devlog/: 01 preparation.txt  02 gdd.txt  03 tdd.txt  04 mvp.txt
docs/dev/: game-design-document.md  mvp.md  technical-design-document.md
preprompts/: philosophy
public/: game_state.mjs  index.html  leaderboard.mjs  main.js  main.mjs  styles.css  utils.mjs  websocket.mjs
public/net/: serverProtocol.mjs  websocket.mjs
public/tests/: leaderboard.test.js  run-tests.html  run.js  setup.js
public/ui/: canvas.mjs  coveredTilePattern.mjs  eventHandlers.mjs  gameRenderer.mjs  tileRenderer.mjs  uiEventHandlers.mjs  uiState.mjs  viewportUtils.mjs
src/: game_state.rs  main.rs  player_color.rs  tls.rs
