[package]
name = "minesweeper_server"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures-util = "0.3.30"
chrono = "0.4.38"
warp = "0.3.7"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4", # Lets you generate random UUIDs
]