[package]
name = "mmoinsweeper"
version = "0.2.1"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures-util = "0.3.30"
chrono = "0.4.38"
warp = { version = "0.3.7", features = ["tls"] }
openssl = "0.10.64"
clap = { version = "4.3", features = ["derive"] }

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4", # Lets you generate random UUIDs
]
